--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ pygments:         true
 permalink:        pretty
 
 # Setup
-title:            Poole
-tagline:          The Jekyll Butler
+title:            Wusi Static
+tagline:          The Static Files
 url:              http://getpoole.com
 paginate:         1
 baseurl:          http://wusihq.github.io/wusi-static/
